Removed the VisibilitySensor to improve the performance and since it's no longer needed

--- a/UI/src/stylesheet.scss
+++ b/UI/src/stylesheet.scss
@@ -15,7 +15,7 @@ code {
 }
 
 .media-container.card {
-    border: 1px solid rgba(0, 0, 0, 0.0);
+    border: 1px solid rgba(0, 0, 0, 0.125);
     cursor: pointer;
     margin-bottom: 15px;
 }
@@ -66,6 +66,6 @@ code {
 
 .badge {
     position: absolute;
-    bottom: 5.5rem;
+    bottom: 7.5rem;
     right: 0.4rem;
 }
